k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadence
  namespace: cadence
spec:
  selector:
    app: cadence
  ports:
    - port: 80
      targetPort: 3000
